fixed viewport scaling on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
     html {
         height: 100%;
+        width: 100%;
     }
     
     body {
